--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
     <string name="action_delete">Delete</string>
+    <string name="noMessage">Nothing to send</string>
+    <string name="message_sent">Your encrypted message is sent</string>
+    <string name="action_email">Email</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
