--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="action_email">Email</string>
     <string name="start">Start</string>
     <string name="stop">Stop Recording</string>
+    <string name="send">send</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
