--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="start">Start</string>
     <string name="stop">Stop Recording</string>
     <string name="send">send</string>
+    <string name="enter">Enter Title Here</string>
+
 
 
     <!-- TODO: Remove or change this placeholder text -->
