--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="stop">Stop Recording</string>
     <string name="send">send</string>
     <string name="enter">Enter Title Here</string>
+    <string name="add_key">add new key</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
