--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,22 +17,13 @@
     <string name="recording">Now recording</string>
     <string name="send">send</string>
     <string name="enter">Enter Title Here</string>
-<<<<<<< Updated upstream
     <string name="add_key">add new key</string>
     <string name="no_encrypted">Please enter an encrypted text</string>
-=======
     <string name="recording_started">Recording Started</string>
     <string name="permission_granted">Permission Granted</string>
     <string name="permission_denied">Permission Denied</string>
+    <string name="title_activity_settings">Settings</string>
 
->>>>>>> Stashed changes
-
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-    <string name="title_activity_splash_screen">splashScreen</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-
+    <string name="burn_key">burn key</string>
+    <string name="burn_key_title">define burn date for key?</string>
 </resources>
