--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,6 @@
     <string name="permission_denied">Permission Denied</string>
     <string name="title_activity_settings">Settings</string>
 
-    <string name="burn_key">burn key</string>
-    <string name="burn_key_title">define burn date for key?</string>
+    <string name="color">Switch color</string>
+    <string name="color_title">Switch between light and dark</string>
 </resources>
